--- a/Hey_TJ/src/App.css
+++ b/Hey_TJ/src/App.css
@@ -1,7 +1,43 @@
+body {
+  border: 2px solid red;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  margin:0;
+  position: relative;
+}
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  flex-grow: 1;
 }
 
+.page {
+  border: 3px solid yellow;
+  min-height: 100vh;
+
+}
+
+a {
+  text-decoration: none;
+  color: purple;
+}
+
+.nav-links {
+  border:2px solid black;
+  display: flex;
+  flex-direction:row;
+  justify-content: space-around;
+}
+
+.footer-links {
+  border:2px solid black;
+  display: flex;
+  flex-direction:row;
+  justify-content: flex-end;
+  gap: 10px;
+  margin-top: auto;
+}
