--- a/Hey_TJ/src/App.css
+++ b/Hey_TJ/src/App.css
@@ -1,5 +1,5 @@
 body {
-  border: 2px solid red;
+  background-color: #F0F2EF;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
@@ -10,31 +10,64 @@ body {
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 0;
   text-align: center;
   flex-grow: 1;
 }
 
 .page {
-  border: 3px solid yellow;
   min-height: 100vh;
-
+  padding: 0 2rem;
+  color:#1C3738;
+  margin-top: 4.5em;
 }
 
 a {
   text-decoration: none;
-  color: purple;
+  color: #4D4847;
 }
+ a:hover {
+  color: #0F8B8D;
+ }
+ 
+ a:active {
+  color: #AFD5AA
+ }
+
+ button {
+  border: none;
+  background-color: #AFD5AA;
+  color: #4D4847;
+  height: 2rem;
+  font-size: .8rem;
+ }
+
+ button:hover {
+  color: #F0F2EF;
+ }
+ 
+ .highlight-btn {
+  width: 11rem;
+ }
+
+ .intro-buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+ }
 
 .nav-links {
-  border:2px solid black;
+  background-color:#AFD5AA;
+  margin:0;
   display: flex;
   flex-direction:row;
   justify-content: space-around;
+  padding-top: 1rem;
+  font-size: 1.3rem;
 }
 
 .footer-links {
-  border:2px solid black;
+ background-color: #AFD5AA;
   display: flex;
   flex-direction:row;
   justify-content: flex-end;
